# parallel_image

./: .gitignore  CMakeLists.txt  README.md  notes.txt
openmp/: common.hpp  main1.cpp  main2.cpp  main3.cpp
serial/: main.cpp
